# coditect-dev-generative-ui-development

./: .coditect  .gitignore  .gitmodules  1-2-3-CODITECT-ONBOARDING-GUIDE.md  1-2-3-ONBOARDING-HOWTO-QUICK-GUIDE.md  2025-11-17-EXPORT-PROJECTS-coditect-rollout-master-2117ET.txt  AZ1.AI-CODITECT-VISION-AND-STRATEGY.md  CHECKPOINT-CLOUD-SQL-DEPLOYMENT-READY.md  CHECKPOINT-QUICK-START.md  CLAUDE.md  CODITECT-CODE-SAFETY-SYSTEM.md  DOCUMENTATION-VERIFICATION-REPORT.md  MASTER-ORCHESTRATION-FRAMEWORK.md  PROJECT-PLAN-EXECUTOR-REFACTORING.md  PROJECT-PLAN.md  README-AUTOMATED-WORKFLOW.md  README-ENTERPRISE-UPDATED.md  README-ENTERPRISE.md  README.md  SYMLINKS-STATUS.md  TASKLIST.md  WHAT-IS-CODITECT.md
submodules/core/coditect-core/: .gitignore  2025-11-22-EXPORT-CODITECT-LICENSE-MANAGER-SEARCH-cr-analyze-the-new-checkpoint-in-submodulescore.txt  2025-11-22-EXPORT-CODITECT-PHASE1-READINESS-SPRINT-cr-analyze-the-new-checkpoint-in-submodulescore.txt  2025-11-23-EXPORT-CODITECT-cr-analyze-the-project-root-it-is-messy-and-nee.txt  CLAUDE.md  GENERATIVE-UI-MIGRATION-COMPLETE.md  GITHUB-ISSUES-PHASE-1.md  GITHUB-PROJECTS-SETUP.md  PHASE-1-IMPLEMENTATION-PLAN.md  PRODUCTION-READINESS-ASSESSMENT.md  PRODUCTION-READINESS-ROADMAP.md  README.md  STAKEHOLDER-PRESENTATION.md  cleanup-phase2.sh  pyproject.toml  pytest.ini  quick-start-phase1.sh  requirements.txt  settings.local.json  setup.sh
submodules/core/coditect-core/MEMORY-CONTEXT/: checkpoint.config.json
submodules/core/coditect-core/RESEARCH/: 05-formatted-transcript-ai-startup-era.md  The-Harsh-Truth-About-Building-Startup-in-the-AI-Era.txt
submodules/core/coditect-core/agents/: README.md  actix-web-specialist.md  adr-compliance-specialist.md  ai-curriculum-specialist.md  ai-specialist.md  (+55 more)
(+1905 files in other folders)
